--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <meta name="keywords" content="SEO, Technical SEO, SEO Strategy, Digital Marketing, Pay Per Click Marketing, PPC">
       <meta name="language" content="english">
       <style>
-         body{max-width:1200px;min-width:1000px;margin:auto;height:100%;background:#1e1e1c;font-size:18px;line-height:24px;height:100%}
+         body{max-width:1200px;min-width:800px;margin:auto;background:#1e1e1c;font-size:18px;line-height:24px;height:100%}
          header{text-align:center;background-color: blue;color:white}
          h1{font-size:48px;margin:0;padding:50px 0 20px 0;border:0;font-weight:300;}
          h2{font-size:26px;margin:0;padding:10px 0 30px 0;border:0;font-weight:300;}
@@ -17,8 +17,8 @@
          a{text-decoration:none;color:#00008B}
          a:hover{text-decoration:underline}
          .row {display: flex;background-color: white}
-         .col-1 {flex: .4;text-align:right;padding: 0 2.5% 0 .5%;background-color:#F0F0F0;color:black}
-         .col-2 {flex: 1;text-align:left; padding: 0 2.5% 0 2.5%;background-color:white ;color:black}
+         .col-1 {flex: .3;text-align:right;padding: 0 2.5% 0 .5%;background-color:#F0F0F0;color:black}
+         .col-2 {flex: .81;text-align:left; padding: 0 2.5% 0 2.5%;background-color:white ;color:black}
          .section{padding:30px 0 0 0}
          .section-title{font-size: 22px;font-weight: 600;}
          .position-title, .project-title{font-size: 22px;font-weight: 600;color:grey}
@@ -62,8 +62,8 @@
                <div class="section-title">EDUCATION</div>
                <div class="details">
                   Bachelor of Science <br>
-                  Business Administration (MIS) <br>
-                  <a href="https://www.csuchico.edu/">California State University, Chico</a> <br>
+                  Business Admin (MIS) <br>
+                  <a href="https://www.csuchico.edu/"> Cal State University Chico</a> <br>
                   Chico, CA <br>
                </div>
             </div>
@@ -126,10 +126,11 @@
             <div class="section">
                <div class="section-title" style="padding-bottom:15px">WORK EXPERIENCE</div>
                <div class="position-title">SEO Manager</div>
-               <a href="https://www.firedepartment.net/">diaTribe Foundation</a> <br>
+               <a href="https://diatribe.org/">diaTribe Foundation</a> <br>
                Jan 2022 to Present<br>
                <ul>
-                  <li>Reversed a declining trend on organic traffic that is now up by 20% from my start date.</li>
+                  <li>Reversed a declining trend on organic traffic that is now up.</li>
+                  <li>Implemented changes that better utlize Google News.</li>
                   <li>Regularly meets with the editorial director and CEO to build digital marketing strategies and goals.</li>
                   <li>Primary contact for the website development firm.</li>
                   <li>Primary source of new ideas and designs for SEO and UI improvements to the website.</li>
@@ -140,7 +141,7 @@
             </div>
             <div class="section">
                <div class="position-title">Founder &amp; Digital Marketing Lead</div>
-               <a href="https://www.firedepartment.net/">FireDepartment.net</a> <br>
+               FireDepartment.net<br>
                Aug 2009 - June 2022 <br>
                <ul>
                   <li>Created a directory listing all fire departments and fire stations in the US.</li>
@@ -212,6 +213,6 @@
                </ul>
             </div>
          </div>
-      </div><div style="position: static !important;"></div>     
+      </div>   
    </body>
 </html>
