--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
    <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       
-      <title>Lars Estrem Resume - SEO and Paid Search Strategist</title>
+      <title>Lars Estrem Resume - SEO & PPC Strategist</title>
       <link rel="icon" type="image/svg+xml" href="https://resume-7id.pages.dev/favicon.svg">
       <link rel="canonical" href="https://resume-7id.pages.dev/">
       <meta name="viewport" content="width=device-width,minimum-scale=1">
