--- a/index.html
+++ b/index.html
@@ -129,14 +129,14 @@
                <a href="https://diatribe.org/">diaTribe Foundation</a> <br>
                Jan 2022 to Present<br>
                <ul>
-                  <li>Reversed a declining trend on organic traffic that is now up.</li>
-                  <li>Implemented changes that better utlize Google News.</li>
-                  <li>Regularly meets with the editorial director and CEO to build digital marketing strategies and goals.</li>
+                  <li>Reversed a declining trend on organic traffic.</li>
+                  <li>Implemented changes that better utilize Google News.</li>
+                  <li>Regularly met with the editorial director and CEO to refine digital marketing strategies and goals.</li>
                   <li>Primary contact for the website development firm.</li>
                   <li>Primary source of new ideas and designs for SEO and UI improvements to the website.</li>
-                  <li>Acquired a MSN Ads grant and optimized it to under $0.10 avg. CPC</li>
-                  <li>Reduced the Google Ads grant CPC by >75%.</li>
-                  <li>Technical SEO: Reduced mobile pagespeed from 17 seconds to 4 seconds.</li>
+                  <li>Acquired a MSN Ads grant and optimized it to fully allocate the grant below avg. $0.07 CPC.</li>
+                  <li>Reduced the existing Google Ads grant CPC by over 75%.</li>
+                  <li>Implemented technical SEO: Reduced mobile pagespeed from 17 seconds to under 4 seconds.</li>
                </ul>
             </div>
             <div class="section">
@@ -145,12 +145,12 @@
                Aug 2009 - June 2022 <br>
                <ul>
                   <li>Created a directory listing all fire departments and fire stations in the US.</li>
-                  <li>Enable &amp; encourage fire departments to update their contact info, add photos, add fire apparatus/firefighters/photos &amp; volunteer recruitment info.</li>
+                  <li>Enable fire departments to update their own contact info, add photos, add fire apparatus/firefighters/photos &amp; volunteer recruitment info.</li>
                   <li>Monitor visitor traffic to learn what works best &amp; find opportunities for improvement.</li>
                   <li>Design new features or performance improvements for better user experience.</li>
                   <li>Recruit/retain programmers, content creators, and an admin to manage the day-to-day operations.</li>
                   <li>Used by over 8,000 fire administrators/personnel to update fire department information.</li>
-                  <li>Averaged 6 million pageveiws a year for last 5 years (over 85% organic).</li>
+                  <li>Averaged 6 million pageveiws a year for the last 5 years (over 85% organic).</li>
                   <li>Managed a Google Ads account with an avg. CPC of $0.05</li>
                </ul>
             </div>
@@ -163,7 +163,7 @@
                   <li>Increased volunteer firefighter recruitment from 100/year to &gt;100/month.</li>
                   <li>Created new programs to generate traffic</li>
                   <li>Streamlined business processes with automated forms to reduce the demands on staff.</li>
-                  <li>Acquired/managed a Google Grant (Google Ads for nonprofits) to bringing in targeted traffic.</li>
+                  <li>Acquired/managed a Google Grant (Google Ads for nonprofits) to bring in targeted traffic.</li>
                </ul>
             </div>
             <div class="section">
