--- a/index.html
+++ b/index.html
@@ -131,12 +131,12 @@
                <ul>
                   <li>Reversed a declining trend on organic traffic.</li>
                   <li>Implemented changes that better utilize Google News.</li>
-                  <li>Regularly met with the editorial director and CEO to refine digital marketing strategies and goals.</li>
+                  <li>Regularly met with the editorial director and CEO to refine digital marketing strategies and tactics.</li>
                   <li>Primary contact for the website development firm.</li>
                   <li>Primary source of new ideas and designs for SEO and UI improvements to the website.</li>
-                  <li>Acquired a MSN Ads grant and optimized it to fully allocate the grant below avg. $0.07 CPC.</li>
+                  <li>Acquired a MSN Ads grant and optimized it to fully allocate the grant's avg. CPC below $0.07.</li>
                   <li>Reduced the existing Google Ads grant CPC by over 75%.</li>
-                  <li>Implemented technical SEO: Reduced mobile pagespeed from 17 seconds to under 4 seconds.</li>
+                  <li>Implemented technical SEO techniques to reduced mobile load times from 17 seconds to under 4 seconds.</li>
                </ul>
             </div>
             <div class="section">
