--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                <ul>
                   <li>Reversed a declining trend on organic traffic.</li>
                   <li>Implemented changes that better utilize Google News.</li>
-                  <li>Regularly met with the editorial director and CEO to refine digital marketing strategies and tactics.</li>
+                  <li>Regularly meet with the editorial director and CEO to create or refine digital marketing strategies and tactics.</li>
                   <li>Primary contact for the website development firm.</li>
                   <li>Primary source of new ideas and designs for SEO and UI improvements to the website.</li>
                   <li>Acquired a MSN Ads grant and optimized it to fully allocate the grant's avg. CPC below $0.07.</li>
@@ -151,7 +151,7 @@
                   <li>Recruit/retain programmers, content creators, and an admin to manage the day-to-day operations.</li>
                   <li>Used by over 8,000 fire administrators/personnel to update fire department information.</li>
                   <li>Averaged 6 million pageveiws a year for the last 5 years (over 85% organic).</li>
-                  <li>Managed a Google Ads account with an avg. CPC of $0.05</li>
+                  <li>Managed a Google Ads account with an avg. CPC of $0.05.</li>
                </ul>
             </div>
             <div class="section">
@@ -159,9 +159,9 @@
                <a href="https://www.nvfirechf.org/">Nevada Fire Chiefs Association</a>  <br>
                Oct. 2016 - Dec. 2021 <br>
                <ul>
-                  <li>Increased website traffic from 40 visitors a month to over 1,500 a month.</li>
+                  <li>Increased website traffic from 40 visitors a month to over 2,000 a month.</li>
                   <li>Increased volunteer firefighter recruitment from 100/year to &gt;100/month.</li>
-                  <li>Created new programs to generate traffic</li>
+                  <li>Created new programs to generate traffic.</li>
                   <li>Streamlined business processes with automated forms to reduce the demands on staff.</li>
                   <li>Acquired/managed a Google Grant (Google Ads for nonprofits) to bring in targeted traffic.</li>
                </ul>
