--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                <ul>
                   <li>Reversed a declining trend on organic traffic.</li>
                   <li>Implemented changes that better utilize Google News.</li>
-                  <li>Regularly meet with the editorial director and CEO to create or refine digital marketing strategies and tactics.</li>
+                  <li>Regularly met with the editorial director and CEO to create or refine digital marketing strategies and tactics.</li>
                   <li>Primary contact for the website development firm.</li>
                   <li>Primary source of new ideas and designs for SEO and UI improvements to the website.</li>
                   <li>Acquired a MSN Ads grant and optimized it to fully allocate the grant's avg. CPC below $0.07.</li>
