--- a/index.html
+++ b/index.html
@@ -129,13 +129,12 @@
                <a href="https://diatribe.org/">diaTribe Foundation</a> <br>
                Jan 2022 to Present<br>
                <ul>
-                  <li>Reversed a declining trend on organic traffic.</li>
                   <li>Implemented changes that better utilize Google News.</li>
-                  <li>Regularly met with the editorial director and CEO to create or refine digital marketing strategies and tactics.</li>
+                  <li>Regularly met with the editorial director and CEO to define strategy.</li>
                   <li>Primary contact for the website development firm.</li>
                   <li>Primary source of new ideas and designs for SEO and UI improvements to the website.</li>
-                  <li>Acquired a MSN Ads grant and optimized it to fully allocate the grant's avg. CPC below $0.07.</li>
-                  <li>Reduced the existing Google Ads grant CPC by over 75%.</li>
+                  <li>Acquired a MSN Ads grant and optimized it to an avg. CPC below $0.10.</li>
+                  <li>Increased traffic on the existing Google Ads grant by 300%.</li>
                   <li>Implemented technical SEO techniques to reduced mobile load times from 17 seconds to under 4 seconds.</li>
                </ul>
             </div>
