--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <link rel="icon" type="image/svg+xml" href="https://resume-7id.pages.dev/favicon.svg">
       <link rel="canonical" href="https://resume-7id.pages.dev/">
       <meta name="viewport" content="width=device-width,minimum-scale=1">
-      <meta name="description" content="Lars Estrem Resume: Education, Skills, and Work Experience.">
+      <meta name="description" content="Lars Estrem Resume: Education, Skills, and Work Experience. SEO, Technical SEO, Digital Marketing, Marketing Strategy, Pay Per Click Marketing, PPC">
       <meta name="keywords" content="SEO, Technical SEO, SEO Strategy, Digital Marketing, Pay Per Click Marketing, PPC">
       <meta name="language" content="english">
       <style>
