--- a/Lars Estrem - Digital Marketing Specialist.html
+++ b/Lars Estrem - Digital Marketing Specialist.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
    <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       
-      <title>Lars Estrem - SEO and Paid Search Strategist</title>
+      <title>Lars Estrem Resume - SEO & PPC Strategist</title>
       <link rel="icon" type="image/svg+xml" href="https://resume-7id.pages.dev/favicon.svg">
       <link rel="canonical" href="https://resume-7id.pages.dev/">
       <meta name="viewport" content="width=device-width,minimum-scale=1">
-      <meta name="description" content="Lars Estrem: Education, Skills, and Work Experience.">
+      <meta name="description" content="Lars Estrem Resume: Education, Skills, and Work Experience. SEO, Technical SEO, Digital Marketing, Marketing Strategy, Pay Per Click Marketing, PPC">
       <meta name="keywords" content="SEO, Technical SEO, SEO Strategy, Digital Marketing, Pay Per Click Marketing, PPC">
       <meta name="language" content="english">
       <style>
-         body{max-width:1200px;min-width:1000px;margin:auto;height:100%;background:#1e1e1c;font-size:18px;line-height:24px;height:100%}
+         body{position:relative;max-width:1200px;min-width:800px;margin:auto;background:#1e1e1c;font-size:18px;line-height:24px;height:100%}
          header{text-align:center;background-color: blue;color:white}
-         h1{font-size:48px;margin:0;padding:50px 0 20px 0;border:0;font-weight:300;}
-         h2{font-size:26px;margin:0;padding:10px 0 30px 0;border:0;font-weight:300;}
+         h1{font-size:48px;margin:0;padding:45px 0 20px 0;border:0;font-weight:300;}
+         h2{font-size:26px;margin:0;padding:10px 0 35px 0;border:0;font-weight:300;}
          svg{width:24px;height:24px;vertical-align: bottom;color:grey;padding-left:10px}
          a{text-decoration:none;color:#00008B}
          a:hover{text-decoration:underline}
          .row {display: flex;background-color: white}
-         .col-1 {flex: .4;text-align:right;padding: 0 2.5% 0 .5%;background-color:#F0F0F0;color:black}
-         .col-2 {flex: 1;text-align:left; padding: 0 2.5% 0 2.5%;background-color:white ;color:black}
+         .col-1 {flex: .3;text-align:right;padding: 0 2.5% 0 .5%;background-color:#F0F0F0;color:black}
+         .col-2 {flex: .81;text-align:left; padding: 0 2.5% 0 2.5%;background-color:white ;color:black}
          .section{padding:30px 0 0 0}
          .section-title{font-size: 22px;font-weight: 600;}
          .position-title, .project-title{font-size: 22px;font-weight: 600;color:grey}
@@ -28,7 +28,7 @@
    <body>
       <header>
          <h1>LARS ESTREM</h1>
-         <h2>SEO SPECIALIST</h2>
+         <h2>Digital Marketing Strategist (SEO and PPC)</h2>        
       </header>
       <div class="row">
          <!-- Column Left -->
@@ -62,8 +62,8 @@
                <div class="section-title">EDUCATION</div>
                <div class="details">
                   Bachelor of Science <br>
-                  Business Administration (MIS) <br>
-                  <a href="https://www.csuchico.edu/">California State University, Chico</a> <br>
+                  Business Admin (MIS) <br>
+                  <a href="https://www.csuchico.edu/"> Cal State University Chico</a> <br>
                   Chico, CA <br>
                </div>
             </div>
@@ -73,15 +73,17 @@
                <div class="skill-group">Tracking &amp; Evaluation</div>
                <div class="details">
                   <a href="https://www.semrush.com/">SEMRUSH</a><br>
+                  <a href="https://www.conductor.com/">Conductor Searchlight</a> <br>
                   <a href="https://www.screamingfrog.co.uk/seo-spider/">Screaming Frog</a> <br>
-                  <a href="https://www.basecamp.com/">Basecamp</a> <br>
                   <a href="https://datastudio.google.com/">Google Data Studios</a><br>
                   <a href="https://analytics.withgoogle.com/">Google Analytics</a> <br>
-                  <a href="https://developers.google.com/speed/pagespeed/insights/">Pagespeed Insights</a> <br>
                   <a href="https://search.google.com/search-console/about">Google Search Console</a> <br>
                   <a href="https://www.bing.com/webmasters/about">Bing Webmaster Tools</a> <br>
-                  <a href="https://www.conductor.com/">Conductor Searchlight</a> <br>
-                  <a href="https://www.microsoft.com/en-us/microsoft-365/excel">Microsoft Excel</a>
+                  <a href="https://developers.google.com/speed/pagespeed/insights/">Pagespeed Insights</a> <br>
+                  <a href="https://www.microsoft.com/en-us/microsoft-365/excel">Microsoft Excel</a><br>
+                  <a href="https://workspace.google.com/">Google Workplace</a><br>
+                  <a href="https://www.basecamp.com/">Basecamp</a> <br>
+                  <a href="https://asana.com/">Asana</a> <br>
                   
                </div>
             </div>
@@ -109,45 +111,46 @@
                <div class="details">
                   <a href="https://cloudflare.com/">Facebook Ads</a><br>
                   <a href="https://ads.google.com/">Google Ads</a><br>
+                  <a href="https://ads.microsoft.com/">MSN Ads</a><br>
                   <a href="https://www.google.com/grants/">Google Grants</a><br>
                </div>
             </div>
-
 
          </div>
          <!-- Column Right -->
          <div class="col-2">
             <div class="section">
                <div class="section-title">CAREER OBJECTIVE</div>
-               An experienced search marketer, data analyst, and SEO evangelist, seeking an opportunity to be part of a cross-functional team at a community focused organization.
+               Experienced search marketer, data analyst, and SEO evangelist, seeking a position on a cross-functional team at a community focused organization.
             </div>
             <div class="section">
                <div class="section-title" style="padding-bottom:15px">WORK EXPERIENCE</div>
                <div class="position-title">SEO Manager</div>
-               <a href="https://www.firedepartment.net/">Diatribe Foundation</a> <br>
+               <a href="https://diatribe.org/">diaTribe Foundation</a> <br>
                Jan 2022 to Present<br>
                <ul>
-                  <li>Reversed a decreasing trend on organic traffic on diatribe.org that is now up by 20%</li>
-                  <li>Regularly meets with the editorial director and CEO to build digital marketing strategies and goals.</li>
+                  <li>Implemented changes that better utilize Google News.</li>
+                  <li>Regularly met with the editorial director and CEO to define strategy.</li>
                   <li>Primary contact for the website development firm.</li>
                   <li>Primary source of new ideas and designs for SEO and UI improvements to the website.</li>
-                  <li>Acquired a MSN Ads grant and optimized it to under $0.10 avg. CPC</li>
-                  <li>Reduced the Google Ads grant CPC by >75%</li>
-                  <li>Reduced pagespeed from 17 seconds to 4 seconds on mobile devices</li>
+                  <li>Acquired a MSN Ads grant and optimized it to an avg. CPC below $0.10.</li>
+                  <li>Increased traffic on the existing Google Ads grant by 300%.</li>
+                  <li>Implemented technical SEO techniques to reduced mobile load times from 17 seconds to under 4 seconds.</li>
                </ul>
             </div>
             <div class="section">
                <div class="position-title">Founder &amp; Digital Marketing Lead</div>
-               <a href="https://www.firedepartment.net/">FireDepartment.net</a> <br>
+               FireDepartment.net<br>
                Aug 2009 - June 2022 <br>
                <ul>
-                  <li>Created a directory listing all fire departments and fire stations in the US.</li>
-                  <li>Enable &amp; encourage fire departments to update their contact info, add photos, add fire apparatus/firefighters/photos &amp; volunteer recruitment info.</li>
-                  <li>Monitor visitor traffic to learn what works best &amp; find opportunities for improvement.</li>
-                  <li>Design new features or performance improvements for better user experience.</li>
-                  <li>Recruit/retain programmers, content creators, and an admin to manage the day-to-day operations.</li>
-                  <li>Used by over 8,000 fire administrators/personnel to update fire department information.</li>
-                  <li>Averaged 6 million pageveiws a year for last 5 years.</li>
+                  <li>Created a search engine friendly directory listing all fire departments &amp; fire stations in the US.</li>
+                  <li>Enable fire departments to edit  their department as well as each stations, firefighters, &amp; aparatus.</li>
+                  <li>Assisted with the recruitment of thousands of vounteer firefighters.</li>
+                  <li>This service was used by over 8,000 fire administrators/personnel to share fire department information.</li>
+                  <li>Averaged 6 million pageveiws a year between 2017 to 2022 with an annual budget of less than $20,000.</li>
+                  <li>Monitor website traffic acquistion in order to optimize site performance and conversions.</li>
+                  <li>Recruit/retain/manage programmers, content creators, and an admin to manage the day-to-day operations.</li>
+                  <li>Managed a Google Ads account with an avg. CPC of $0.05.</li>
                </ul>
             </div>
             <div class="section">
@@ -155,11 +158,11 @@
                <a href="https://www.nvfirechf.org/">Nevada Fire Chiefs Association</a>  <br>
                Oct. 2016 - Dec. 2021 <br>
                <ul>
-                  <li>Increased website traffic from 40 visitors a month to over 1,500 a month.</li>
+                  <li>Increased website traffic from 40 visitors a month to over 2,000 a month.</li>
                   <li>Increased volunteer firefighter recruitment from 100/year to &gt;100/month.</li>
-                  <li>Created new programs to generate traffic</li>
+                  <li>Created new programs to generate traffic.</li>
                   <li>Streamlined business processes with automated forms to reduce the demands on staff.</li>
-                  <li>Acquired/managed a Google Grant (AdWords for nonprofits) to bringing in targeted traffic.</li>
+                  <li>Acquired/managed a Google Grant (Google Ads for nonprofits) to bring in targeted traffic.</li>
                </ul>
             </div>
             <div class="section">
@@ -209,6 +212,6 @@
                </ul>
             </div>
          </div>
-      </div><div style="position: static !important;"></div>     
+      </div>   
    </body>
 </html>
