Update Lars Estrem - Digital Marketing Specialist.html

--- a/Lars Estrem - Digital Marketing Specialist.html
+++ b/Lars Estrem - Digital Marketing Specialist.html
@@ -84,7 +84,6 @@
                   <a href="https://workspace.google.com/">Google Workplace</a><br>
                   <a href="https://www.basecamp.com/">Basecamp</a> <br>
                   <a href="https://asana.com/">Asana</a> <br>
-                  
                </div>
             </div>
             <div class="section">
@@ -134,7 +133,7 @@
                   <li>Primary contact for the website development firm.</li>
                   <li>Primary source of new ideas and designs for SEO and UI improvements to the website.</li>
                   <li>Acquired a MSN Ads grant and optimized it to an avg. CPC below $0.10.</li>
-                  <li>Increased traffic on the existing Google Ads grant by 300%.</li>
+                  <li>Increased traffic on the existing Google Ads grant (Adwords) by 300%.</li>
                   <li>Implemented technical SEO techniques to reduced mobile load times from 17 seconds to under 4 seconds.</li>
                </ul>
             </div>
