--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
       <meta name="keywords" content="SEO, Technical SEO, SEO Strategy, Digital Marketing, Pay Per Click Marketing, PPC">
       <meta name="language" content="english">
       <style>
-         body{max-width:1200px;min-width:800px;margin:auto;background:#1e1e1c;font-size:18px;line-height:24px;height:100%}
+         body{position:relative;max-width:1200px;min-width:800px;margin:auto;background:#1e1e1c;font-size:18px;line-height:24px;height:100%}
          header{text-align:center;background-color: blue;color:white}
-         h1{font-size:48px;margin:0;padding:50px 0 20px 0;border:0;font-weight:300;}
-         h2{font-size:26px;margin:0;padding:10px 0 30px 0;border:0;font-weight:300;}
+         h1{font-size:48px;margin:0;padding:45px 0 20px 0;border:0;font-weight:300;}
+         h2{font-size:26px;margin:0;padding:10px 0 35px 0;border:0;font-weight:300;}
          svg{width:24px;height:24px;vertical-align: bottom;color:grey;padding-left:10px}
          a{text-decoration:none;color:#00008B}
          a:hover{text-decoration:underline}
@@ -28,7 +28,7 @@
    <body>
       <header>
          <h1>LARS ESTREM</h1>
-         <h2>Digital Marketing Strategist (SEO and PPC)</h2>
+         <h2>Digital Marketing Strategist (SEO and PPC)</h2>        
       </header>
       <div class="row">
          <!-- Column Left -->
@@ -41,7 +41,7 @@
                      <path fill="currentColor" d="M20,8L12,13L4,8V6L12,11L20,6M20,4H4C2.89,4 2,4.89 2,6V18A2,2 0 0,0 4,20H20A2,2 0 0,0 22,18V6C22,4.89 21.1,4 20,4Z"></path>
                   </svg>
                   <br>
-                  530-570-5277
+                  53O-57O-5277
                   <svg viewBox="0 0 24 24">
                      <path fill="currentColor" d="M6.62,10.79C8.06,13.62 10.38,15.94 13.21,17.38L15.41,15.18C15.69,14.9 16.08,14.82 16.43,14.93C17.55,15.3 18.75,15.5 20,15.5A1,1 0 0,1 21,16.5V20A1,1 0 0,1 20,21A17,17 0 0,1 3,4A1,1 0 0,1 4,3H7.5A1,1 0 0,1 8.5,4C8.5,5.25 8.7,6.45 9.07,7.57C9.18,7.92 9.1,8.31 8.82,8.59L6.62,10.79Z"></path>
                   </svg>
@@ -84,7 +84,6 @@
                   <a href="https://workspace.google.com/">Google Workplace</a><br>
                   <a href="https://www.basecamp.com/">Basecamp</a> <br>
                   <a href="https://asana.com/">Asana</a> <br>
-                  
                </div>
             </div>
             <div class="section">
@@ -134,7 +133,7 @@
                   <li>Primary contact for the website development firm.</li>
                   <li>Primary source of new ideas and designs for SEO and UI improvements to the website.</li>
                   <li>Acquired a MSN Ads grant and optimized it to an avg. CPC below $0.10.</li>
-                  <li>Increased traffic on the existing Google Ads grant by 300%.</li>
+                  <li>Increased traffic on the existing Google Ads grant (Adwords) by 300%.</li>
                   <li>Implemented technical SEO techniques to reduced mobile load times from 17 seconds to under 4 seconds.</li>
                </ul>
             </div>
@@ -143,13 +142,13 @@
                FireDepartment.net<br>
                Aug 2009 - June 2022 <br>
                <ul>
-                  <li>Created a directory listing all fire departments and fire stations in the US.</li>
-                  <li>Enable fire departments to update their own contact info, add photos, add fire apparatus/firefighters/photos &amp; volunteer recruitment info.</li>
-                  <li>Monitor visitor traffic to learn what works best &amp; find opportunities for improvement.</li>
-                  <li>Design new features or performance improvements for better user experience.</li>
-                  <li>Recruit/retain programmers, content creators, and an admin to manage the day-to-day operations.</li>
-                  <li>Used by over 8,000 fire administrators/personnel to update fire department information.</li>
-                  <li>Averaged 6 million pageveiws a year for the last 5 years (over 85% organic).</li>
+                  <li>Created a search engine friendly directory listing all fire departments &amp; fire stations in the US.</li>
+                  <li>Enable fire departments to edit  their department as well as each stations, firefighters, &amp; aparatus.</li>
+                  <li>Assisted with the recruitment of thousands of vounteer firefighters.</li>
+                  <li>This service was used by over 8,000 fire administrators/personnel to share fire department information.</li>
+                  <li>Averaged 6 million pageveiws a year between 2017 to 2022 with an annual budget of less than $20,000.</li>
+                  <li>Monitor website traffic acquistion in order to optimize site performance and conversions.</li>
+                  <li>Recruit/retain/manage programmers, content creators, and an admin to manage the day-to-day operations.</li>
                   <li>Managed a Google Ads account with an avg. CPC of $0.05.</li>
                </ul>
             </div>
