--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                   <li>This service was used by over 8,000 fire administrators/personnel to share fire department information.</li>
                   <li>Averaged 6 million pageveiws a year between 2017 to 2022 with an annual budget of less than $20,000.</li>
                   <li>Monitor website traffic acquistion in order to optimize site performance and conversions.</li>
-                  <li>Recruit/retain/manage programmers, content creators, and an admin to manage the day-to-day operations.</li>
+                  <li>Recruit & manage programmers as well as an administrator to manage the day-to-day operations.</li>
                   <li>Managed a Google Ads account with an avg. CPC of $0.05.</li>
                </ul>
             </div>
