--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
                <a href="https://diatribe.org/">diaTribe Foundation</a> <br>
                Jan 2022 to Present<br>
                <ul>
-                  <li>Implemented changes that better utilize Google News.</li>
-                  <li>Regularly met with the editorial director and CEO to define strategy.</li>
+                  <li>Implemented changes that generated substantial traffic from Google News.</li>
+                  <li>Regularly met with the editorial director and CEO to define digital marketing strategy.</li>
                   <li>Primary contact for the website development firm.</li>
                   <li>Primary source of new ideas and designs for SEO and UI improvements to the website.</li>
                   <li>Acquired a MSN Ads grant and optimized it to an avg. CPC below $0.10.</li>
@@ -143,11 +143,11 @@
                Aug 2009 - June 2022 <br>
                <ul>
                   <li>Created a search engine friendly directory listing all fire departments &amp; fire stations in the US.</li>
-                  <li>Enable fire departments to edit  their department as well as each stations, firefighters, &amp; aparatus.</li>
-                  <li>Assisted with the recruitment of thousands of vounteer firefighters.</li>
+                  <li>Enable fire departments to edit  their department as well as each station, firefighter, &amp; apparatus.</li>
+                  <li>Assisted with the recruitment of thousands of volunteer firefighters.</li>
                   <li>This service was used by over 8,000 fire administrators/personnel to share fire department information.</li>
-                  <li>Averaged 6 million pageveiws a year between 2017 to 2022 with an annual budget of less than $20,000.</li>
-                  <li>Monitor website traffic acquistion in order to optimize site performance and conversions.</li>
+                  <li>Averaged 6 million pageviews a year between 2017 to 2022 with an annual budget of less than $20,000.</li>
+                  <li>Monitor website traffic acquisition in order to optimize site performance and conversions.</li>
                   <li>Recruit & manage programmers as well as an administrator to manage the day-to-day operations.</li>
                   <li>Managed a Google Ads account with an avg. CPC of $0.05.</li>
                </ul>
