--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                Oct. 2016 - Dec. 2021 <br>
                <ul>
                   <li>Increased website traffic from 40 visitors a month to over 2,000 a month.</li>
-                  <li>Increased volunteer firefighter recruitment from 100/year to &gt;100/month.</li>
+                  <li>Increased volunteer firefighter recruitment over 1,000%.</li>
                   <li>Created new programs to generate traffic.</li>
                   <li>Streamlined business processes with automated forms to reduce the demands on staff.</li>
                   <li>Acquired/managed a Google Grant (Google Ads for nonprofits) to bring in targeted traffic.</li>
@@ -172,7 +172,7 @@
                   <li>Provided dedicated SEO training and support for Build.com &amp; FaucetsDirect.com product teams.</li>
                   <li>Provided technical SEO oversight of all Build.com eCommerce websites.</li>
                   <li>Created a company-wide newsletter helping create a wider understanding of SEO.</li>
-                  <li>Presented digital marketing strategies to VP's and key department heads.</li>
+                  <li>Provided digital marketing strategy recommendations to VP's and key department heads.</li>
                   <li>Led a monthly SEO programmer meeting attended by the VP of technology and top programmers.</li>
                </ul>
             </div>
