--- a/index.html
+++ b/index.html
@@ -142,14 +142,15 @@
                FireDepartment.net<br>
                Aug 2009 - June 2022 <br>
                <ul>
-                  <li>Created a search engine friendly directory listing all fire departments &amp; fire stations in the US.</li>
-                  <li>Enable fire departments to edit  their department as well as each station, firefighter, &amp; apparatus.</li>
-                  <li>Assisted with the recruitment of thousands of volunteer firefighters.</li>
+                  <li>FireDepartment.net was a search engine friendly directory of all fire depts &amp; fire stations in the US.</li>
+                  <li>Each fire dept admin could edit their department info as well as each station, firefighter, &amp; apparatus.</li>
+                  <li>The site helped recruit thousands of volunteer firefighters.</li>
                   <li>This service was used by over 8,000 fire administrators/personnel to share fire department information.</li>
-                  <li>Averaged 6 million pageviews a year between 2017 to 2022 with an annual budget of less than $20,000.</li>
-                  <li>Monitor website traffic acquisition in order to optimize site performance and conversions.</li>
-                  <li>Recruit & manage programmers as well as an administrator to manage the day-to-day operations.</li>
+                  <li>We averaged 6 million pageviews a year between 2017 to 2022 with a shoestring budget.</li>
+                  <li>Monitored website traffic in order to optimize site performance and increase conversions.</li>
+                  <li>Recruited & manage programmers as well as an administrator to manage the day-to-day operations.</li>
                   <li>Managed a Google Ads account with an avg. CPC of $0.05.</li>
+                  <li>Managed bookkeeping, taxes, legal and other business requirements.</li>
                </ul>
             </div>
             <div class="section">
