--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
          .section{padding:30px 0 0 0}
          .section-title{font-size: 22px;font-weight: 600;}
          .position-title, .project-title{font-size: 22px;font-weight: 600;color:grey}
+         .company-name{font-weight: bold;}
          .skill-group{font-size: 20px;font-weight:600;color:grey}
       </style>
    </head>
@@ -125,7 +126,7 @@
             <div class="section">
                <div class="section-title" style="padding-bottom:15px">WORK EXPERIENCE</div>
                <div class="position-title">SEO Manager</div>
-               <a href="https://diatribe.org/">diaTribe Foundation</a> <br>
+               <a class="company-name" href="https://diatribe.org/">diaTribe Foundation</a> <br>
                Jan 2022 to Present<br>
                <ul>
                   <li>Implemented changes that generated substantial traffic from Google News.</li>
@@ -139,7 +140,7 @@
             </div>
             <div class="section">
                <div class="position-title">Founder &amp; Digital Marketing Lead</div>
-               FireDepartment.net<br>
+               <a class="company-name">FireDepartment.net</a> - Now closed<br>
                Aug 2009 - June 2022 <br>
                <ul>
                   <li>FireDepartment.net was a search engine friendly directory of all fire depts &amp; fire stations in the US.</li>
@@ -155,7 +156,7 @@
             </div>
             <div class="section">
                <div class="position-title">Director of Marketing</div>
-               <a href="https://www.nvfirechf.org/">Nevada Fire Chiefs Association</a>  <br>
+               <a class="company-name" href="https://www.nvfirechf.org/">Nevada Fire Chiefs Association</a>  <br>
                Oct. 2016 - Dec. 2021 <br>
                <ul>
                   <li>Increased website traffic from 40 visitors a month to over 2,000 a month.</li>
@@ -167,7 +168,7 @@
             </div>
             <div class="section">
                <div class="position-title">SEO Analyst</div>
-               <a href="https://www.build.com/">Build.com</a> <br>
+               <a class="company-name" href="https://www.build.com/">Build.com</a> <br>
                Aug 2010 - Aug 2011 <br>
                <ul>
                   <li>Provided dedicated SEO training and support for Build.com &amp; FaucetsDirect.com product teams.</li>
@@ -179,7 +180,7 @@
             </div>
             <div class="section">
                <div class="position-title">Fire Engine Operator</div>
-               <a href="https://www.fs.usda.gov/managing-land/fire">US Forest Service</a> <br>
+               <a class="company-name" href="https://www.fs.usda.gov/managing-land/fire">US Forest Service</a> <br>
                7-2001 - 6-2008 <br>
                <ul>
                   <li>Perform daily inspecting and maintaining the fire engine.</li>
@@ -191,7 +192,7 @@
             </div>
             <div class="section" style="height:865px"> <!-- height needed to print full screen with two colums -->
                <div class="position-title">Visual Basic &amp; Systems Analysis Instructor</div>
-               Information Technology Institute (a post graduate tech school) <br>
+               <a class="company-name">Information Technology Institute</a> (a post graduate tech school) <br>
                2-2000 - 5-2001 <br>
                <ul>
                   <li>
