--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
    <body>
       <header>
          <h1>LARS ESTREM</h1>
-         <h2>Digital Marketing Strategist (SEO and PPC)</h2>        
+         <h2>Digital marketing expert focusing on SEO and pay-per-click advertising</h2>        
       </header>
       <div class="row">
          <!-- Column Left -->
@@ -71,7 +71,7 @@
             
             <div class="section">
                <div class="section-title">SKILLS</div>
-               <div class="skill-group">Tracking &amp; Evaluation</div>
+               <div class="skill-group">Tracking &amp; Productivity</div>
                <div class="details">
                   <a href="https://www.semrush.com/">SEMRUSH</a><br>
                   <a href="https://www.conductor.com/">Conductor Searchlight</a> <br>
@@ -82,7 +82,8 @@
                   <a href="https://www.bing.com/webmasters/about">Bing Webmaster Tools</a> <br>
                   <a href="https://developers.google.com/speed/pagespeed/insights/">Pagespeed Insights</a> <br>
                   <a href="https://www.microsoft.com/en-us/microsoft-365/excel">Microsoft Excel</a><br>
-                  <a href="https://workspace.google.com/">Google Workplace</a><br>
+                  <a href="https://workspace.google.com/">Google Workspace</a><br>
+                  <a href="https://monday.com/">Monday.com</a> <br>
                   <a href="https://www.basecamp.com/">Basecamp</a> <br>
                   <a href="https://asana.com/">Asana</a> <br>
                </div>
@@ -109,10 +110,11 @@
             <div class="section">
                <div class="skill-group">Paid Marketing</div>
                <div class="details">
-                  <a href="https://cloudflare.com/">Facebook Ads</a><br>
                   <a href="https://ads.google.com/">Google Ads</a><br>
                   <a href="https://ads.microsoft.com/">MSN Ads</a><br>
+                  <a href="https://cloudflare.com/">Facebook Ads</a><br>
                   <a href="https://www.google.com/grants/">Google Grants</a><br>
+                  <a href="https://nonprofits.tsi.microsoft.com/en-US/ads-for-social-impact/">MSN Ads Grants</a><br>
                </div>
             </div>
 
@@ -121,38 +123,31 @@
          <div class="col-2">
             <div class="section">
                <div class="section-title">CAREER OBJECTIVE</div>
-               Experienced search marketer, data analyst, and SEO evangelist, seeking a position on a cross-functional team at a community focused organization.
+               Experienced search marketer, data analyst, and SEO evangelist, seeking a position focused on agressive search marketing growth.
             </div>
             <div class="section">
                <div class="section-title" style="padding-bottom:15px">WORK EXPERIENCE</div>
                <div class="position-title">SEO Manager</div>
                <a class="company-name" href="https://diatribe.org/">diaTribe Foundation</a> <br>
-               Jan 2022 to Present<br>
+               Jan 2022 to Jan 2023<br>
                <ul>
+                  <li>Assisted with keyword research & recommendations for new content.</li>
+                  <li>Implemented technical SEO best practices to improve page speed, security and add structured data.</li>
                   <li>Implemented changes that generated substantial traffic from Google News.</li>
-                  <li>Regularly met with the editorial director and CEO to define digital marketing strategy.</li>
-                  <li>Primary contact for the website development firm.</li>
-                  <li>Primary source of new ideas and designs for SEO and UI improvements to the website.</li>
-                  <li>Acquired a MSN Ads grant and optimized it to an avg. CPC below $0.10.</li>
-                  <li>Increased traffic on the existing Google Ads grant (Adwords) by 300%.</li>
-                  <li>Implemented technical SEO techniques to reduced mobile load times from 17 seconds to under 4 seconds.</li>
+                  <li>Improved website usability and ADA accessibility.</li>
+                  <li>Reduced content duplication.</li>
+                  <li>Created, optimized, & grew an MSN Ads (pay-per-click) account to over 10,000 clicks a day.</li>
+                  <li>Provided recommendations that increased Google ads traffic by 400% with the same budget.</li>
                </ul>
             </div>
             <div class="section">
                <div class="position-title">Founder &amp; Digital Marketing Lead</div>
-               <a class="company-name">FireDepartment.net</a> - Now closed<br>
-               Aug 2009 - June 2022 <br>
-               <ul>
-                  <li>FireDepartment.net was a search engine friendly directory of all fire depts &amp; fire stations in the US.</li>
-                  <li>Each fire dept admin could edit their department info as well as each station, firefighter, &amp; apparatus.</li>
-                  <li>The site helped recruit thousands of volunteer firefighters.</li>
-                  <li>This service was used by over 8,000 fire administrators/personnel to share fire department information.</li>
-                  <li>We averaged 6 million pageviews a year between 2017 to 2022 with a shoestring budget.</li>
-                  <li>Monitored website traffic in order to optimize site performance and increase conversions.</li>
-                  <li>Recruited & manage programmers as well as an administrator to manage the day-to-day operations.</li>
-                  <li>Managed a Google Ads account with an avg. CPC of $0.05.</li>
-                  <li>Managed bookkeeping, taxes, legal and other business requirements.</li>
-               </ul>
+               <a class="company-name">FireDepartment.net</a><br>
+               Aug 2009 - June 2023 <br>
+               
+               <br>
+               FireDepartment.net was a free (ad supported) service helping fire depts get online and recruit volunteers.  We averaged over 6 million pageviews a year from 2017 to 2022 and had over 8,000 fire dept personnel signed up to add or update their fire dept information. Administrators could edit their department info as well as each station, firefighter, apparatus, volunteer info, add pictures, & more. 
+               <br>
             </div>
             <div class="section">
                <div class="position-title">Director of Marketing</div>
