--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
          header{text-align:center;background-color: blue;color:white}
          h1{font-size:48px;margin:0;padding:45px 0 20px 0;border:0;font-weight:300;}
          h2{font-size:26px;margin:0;padding:10px 0 35px 0;border:0;font-weight:300;}
+         ul{margin-bottom: 0px;}
          svg{width:24px;height:24px;vertical-align: bottom;color:grey;padding-left:10px}
          a{text-decoration:none;color:#00008B}
          a:hover{text-decoration:underline}
          .row {display: flex;background-color: white}
-         .col-1 {flex: .3;text-align:right;padding: 0 2.5% 0 .5%;background-color:#F0F0F0;color:black}
+         .col-1 {flex: .23;text-align:right;padding: 0 2.5% 0 .5%;background-color:#F0F0F0;color:black}
          .col-2 {flex: .81;text-align:left; padding: 0 2.5% 0 2.5%;background-color:white ;color:black}
-         .section{padding:30px 0 0 0}
+         .section{padding:25px 0 0 0}
          .section-title{font-size: 22px;font-weight: 600;}
          .position-title, .project-title{font-size: 22px;font-weight: 600;color:grey}
          .company-name{font-weight: bold;}
@@ -123,7 +124,7 @@
          <div class="col-2">
             <div class="section">
                <div class="section-title">CAREER OBJECTIVE</div>
-               Experienced search marketer, data analyst, and SEO evangelist, seeking a position focused on agressive search marketing growth.
+               Experienced search marketer seeking a position focused on agressive search marketing growth.
             </div>
             <div class="section">
                <div class="section-title" style="padding-bottom:15px">WORK EXPERIENCE</div>
@@ -131,13 +132,11 @@
                <a class="company-name" href="https://diatribe.org/">diaTribe Foundation</a> <br>
                Jan 2022 to Jan 2023<br>
                <ul>
-                  <li>Assisted with keyword research & recommendations for new content.</li>
-                  <li>Implemented technical SEO best practices to improve page speed, security and add structured data.</li>
-                  <li>Implemented changes that generated substantial traffic from Google News.</li>
-                  <li>Improved website usability and ADA accessibility.</li>
-                  <li>Reduced content duplication.</li>
-                  <li>Created, optimized, & grew an MSN Ads (pay-per-click) account to over 10,000 clicks a day.</li>
-                  <li>Provided recommendations that increased Google ads traffic by 400% with the same budget.</li>
+                  <li>Provided keyword research for new content.</li>
+                  <li>Implemented SEO best practices to improve page speed, security, reduced duplication, and added structured data.</li>
+                  <li>Implemented Google News optimizations to boost traffic.</li>
+                  <li>Started & grew an MSN Ads account to over 10,000 clicks/day.</li>
+                  <li>Increased Google ads traffic by 400% with the same budget.</li>
                </ul>
             </div>
             <div class="section">
