--- a/index.html
+++ b/index.html
@@ -18,23 +18,29 @@
          a{text-decoration:none;color:#00008B}
          a:hover{text-decoration:underline}
          .row {display: flex;background-color: white}
-         .col-1 {flex: .23;text-align:right;padding: 0 2.5% 0 .5%;background-color:#F0F0F0;color:black}
-         .col-2 {flex: .81;text-align:left; padding: 0 2.5% 0 2.5%;background-color:white ;color:black}
+         .col-1 {flex: .22;text-align:right;padding: 0 2.5% 0 .5%;background-color:#F0F0F0;color:black}
+         .col-2 {flex: .78;text-align:left; padding: 0 2.5% 0 2.5%;background-color:white ;color:black}
          .section{padding:25px 0 0 0}
          .section-title{font-size: 22px;font-weight: 600;}
          .position-title, .project-title{font-size: 22px;font-weight: 600;color:grey}
          .company-name{font-weight: bold;}
-         .skill-group{font-size: 20px;font-weight:600;color:grey}
+         .skill-group{font-size: 18px;font-weight:600;color:grey}
       </style>
    </head>
    <body>
       <header>
          <h1>LARS ESTREM</h1>
-         <h2>Digital marketing expert focusing on SEO and pay-per-click advertising</h2>        
+         <h2>Digital marketing expert focusing on SEO and pay-per-click advertising</h2>   
       </header>
       <div class="row">
          <!-- Column Left -->
          <div class="col-1">
+            
+            <div class="section">
+               <div class="section-title">ONLINE RESUME</div>
+               <div class="details"><a href="https://resume-7id.pages.dev/">resume-7id.pages.dev</a></div>
+            </div>
+            
             <div class="section">
                <div class="section-title">CONTACT</div>
                <div class="details">
@@ -60,6 +66,7 @@
                   <br>
                </div>
             </div>
+
             <div class="section">
                <div class="section-title">EDUCATION</div>
                <div class="details">
@@ -84,7 +91,6 @@
                   <a href="https://developers.google.com/speed/pagespeed/insights/">Pagespeed Insights</a> <br>
                   <a href="https://www.microsoft.com/en-us/microsoft-365/excel">Microsoft Excel</a><br>
                   <a href="https://workspace.google.com/">Google Workspace</a><br>
-                  <a href="https://monday.com/">Monday.com</a> <br>
                   <a href="https://www.basecamp.com/">Basecamp</a> <br>
                   <a href="https://asana.com/">Asana</a> <br>
                </div>
@@ -92,6 +98,8 @@
             <div class="section">
                <div class="skill-group">Programming</div>
                <div class="details">
+                  <a href="https://schema.org/">Structured Data</a><br>
+                  <a href="https://cloudflare.com/">Cloudflare</a><br>
                   HTML <br>
                   CSS <br>
                   PHP <br>
@@ -99,13 +107,6 @@
                   Jekyll <br>
                   Hugo <br>
                   SQL <br>
-               </div>
-            </div>
-            <div class="section">
-               <div class="skill-group">Optimizations</div>
-               <div class="details">
-                  <a href="https://cloudflare.com/">Cloudflare</a><br>
-                  <a href="https://schema.org/">Structured Data</a><br>
                </div>
             </div>
             <div class="section">
@@ -201,7 +202,7 @@
                      <ul>
                         <li>Helped teams set up and follow team goals/expectations.</li>
                         <li>Helped students find solutions to errors and answer questions.</li>
-                        <li>Provide feedback to individuals &amp; teams on working more effectively together.</li>
+                        <li>Provide tips & feedback to on working effectively together.</li>
                      </ul>
                   </li>
                </ul>
