--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                <div class="section-title">ONLINE RESUME</div>
                <div class="details"><a href="https://resume-7id.pages.dev/">resume-7id.pages.dev</a></div>
             </div>
-            
+
             <div class="section">
                <div class="section-title">CONTACT</div>
                <div class="details">
@@ -125,7 +125,7 @@
          <div class="col-2">
             <div class="section">
                <div class="section-title">CAREER OBJECTIVE</div>
-               Experienced search marketer seeking a position focused on agressive search marketing growth.
+               Experienced search marketer seeking a position focused on agressive growth.
             </div>
             <div class="section">
                <div class="section-title" style="padding-bottom:15px">WORK EXPERIENCE</div>
